fixed social spacing on iPhone 4 and up

--- a/src/stylus/4.modules.content.styl
+++ b/src/stylus/4.modules.content.styl
@@ -51,7 +51,7 @@ $paragraph-lineheight = 34*$px
 	display: flex
 	flex-direction: row
 	align-items: center
-	justify-content: space-between
+	justify-content: space-around
 	width: 320px
 	margin-top: $vertical-space
 
